# cross-model-activation-transfer

./: .gitattributes  .gitignore  .paper_artifact_staging  ARTIFACT_SCOPE.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  staging_manifest.json
.github/workflows/: artifact-validation.yml
configs/: phase1.yaml  phase2.yaml  phase3.yaml
data/tasks/multi_hop_reasoning/: clean_eval.jsonl  metadata.json  test.jsonl  test_enhanced.jsonl  test_v2.jsonl  test_v2_pilot.jsonl  train.jsonl  val.jsonl
papers/h1_activation_transfer/: README.md  internal_audit_remediation.md
papers/h1_activation_transfer/appendix/: correction_history.md  metric_disagreement_spot_check.md  reproducibility.md  translation_quality.md
papers/h1_activation_transfer/data_audit/: clean_eval_manifest.json  dataset_audit.md  leakage_report.json
papers/h1_activation_transfer/protocol/: execution_runbook.md  experiment_matrix.md  final_protocol.md  metrics.md
papers/h1_activation_transfer/results/: equivalence_report.json  equivalence_report.md  final_pairwise_comparisons.json  final_pairwise_comparisons.md  final_pairwise_comparisons_by_condition.csv  final_pairwise_comparisons_per_run.csv  final_summary.json  final_summary.md  final_summary_by_condition.csv  final_summary_per_run.csv  final_validation_report.json  final_validation_report.md  metric_disagreement_audit.csv  (+2 more)
tests/: test_h1_clean_eval_reproducible.py  test_h1_final_tools.py  test_lora_align.py  test_m6_replacement.py  test_m7_scale_corrected.py  test_nl_relay.py  test_translation_layer.py
(+71 files in other folders)
