[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cross-model-activation-transfer"
version = "0.1.0"
description = "Paper artifact for a negative result on cross-model activation transfer"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = []  # see requirements.txt

[project.optional-dependencies]
dev = ["black", "isort", "flake8", "pytest", "pytest-cov", "jupyter"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
